<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9pt-6G-qmP">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="lPE-l9-8Ms">
            <objects>
                <navigationController id="9pt-6G-qmP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ekw-xP-Ov0">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eh5-Wu-1h7"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dpc-gZ-edD" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-239" y="1037"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="universallink_sample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txq-YY-8B2">
                                <rect key="frame" x="193" y="209" width="215" height="55"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="215" id="h1o-yG-x2d"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <state key="normal" title="HTTP"/>
                                <connections>
                                    <action selector="tappedHttpButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qNu-5s-51D"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vdw-s2-Idb">
                                <rect key="frame" x="193" y="336" width="215" height="55"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="215" id="3Qc-Ts-Ony"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <state key="normal" title="HTTPS"/>
                                <connections>
                                    <action selector="tappedHttpsButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d6Q-VX-bjC"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Inq-6b-apY">
                                <rect key="frame" x="270" y="448" width="61" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lij-rO-4LR">
                                <rect key="frame" x="161" y="524" width="78" height="30"/>
                                <state key="normal" title="UIWebView"/>
                                <connections>
                                    <action selector="pressedWebViewButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GaL-BR-GoZ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yol-vY-2ho">
                                <rect key="frame" x="275" y="524" width="50" height="30"/>
                                <state key="normal" title="WebKit"/>
                                <connections>
                                    <action selector="pressedWebKitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jul-b2-eYf"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EHd-QG-Esf">
                                <rect key="frame" x="367" y="524" width="40" height="30"/>
                                <state key="normal" title="Safari"/>
                                <connections>
                                    <action selector="pressedSafariButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l16-e7-Pgt"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="Lij-rO-4LR" firstAttribute="top" secondItem="vdw-s2-Idb" secondAttribute="bottom" constant="133" id="JdG-n1-PBA"/>
                            <constraint firstItem="vdw-s2-Idb" firstAttribute="top" secondItem="txq-YY-8B2" secondAttribute="bottom" constant="72" id="KuR-a4-V93"/>
                            <constraint firstItem="Inq-6b-apY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M37-1I-HGw"/>
                            <constraint firstItem="EHd-QG-Esf" firstAttribute="leading" secondItem="yol-vY-2ho" secondAttribute="trailing" constant="42" id="PtO-2i-xYA"/>
                            <constraint firstItem="Inq-6b-apY" firstAttribute="top" secondItem="vdw-s2-Idb" secondAttribute="bottom" constant="57" id="bDF-4e-b6M"/>
                            <constraint firstItem="EHd-QG-Esf" firstAttribute="top" secondItem="vdw-s2-Idb" secondAttribute="bottom" constant="133" id="dMo-Sc-m0w"/>
                            <constraint firstItem="yol-vY-2ho" firstAttribute="centerX" secondItem="Inq-6b-apY" secondAttribute="centerX" id="gXq-9W-uBj"/>
                            <constraint firstItem="vdw-s2-Idb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mHj-Xp-SlR"/>
                            <constraint firstItem="txq-YY-8B2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="145" id="n7r-hK-QCb"/>
                            <constraint firstItem="txq-YY-8B2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="olU-h8-Ha4"/>
                            <constraint firstItem="yol-vY-2ho" firstAttribute="top" secondItem="Inq-6b-apY" secondAttribute="bottom" constant="46" id="svg-bc-Wt9"/>
                            <constraint firstItem="yol-vY-2ho" firstAttribute="leading" secondItem="Lij-rO-4LR" secondAttribute="trailing" constant="36" id="vbD-Hv-87V"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="77I-Kl-jTs"/>
                    <connections>
                        <outlet property="httpButton" destination="txq-YY-8B2" id="juN-b7-nTa"/>
                        <outlet property="httpsButton" destination="vdw-s2-Idb" id="ZzO-cr-ubd"/>
                        <outlet property="safariButton" destination="EHd-QG-Esf" id="STS-IB-qz8"/>
                        <outlet property="selectedTypeLabel" destination="Inq-6b-apY" id="uyh-Xr-cpb"/>
                        <outlet property="uiwebviewButton" destination="Lij-rO-4LR" id="EY4-Vi-m3t"/>
                        <outlet property="webkitButton" destination="yol-vY-2ho" id="gIY-7C-RWL"/>
                        <segue destination="zXg-eH-JXJ" kind="show" identifier="openWebViewController" id="UO2-IR-pYX"/>
                        <segue destination="Hwa-Ib-Dbr" kind="show" identifier="openWebKitViewController" id="2Vu-Ul-k7E"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="519" y="1037"/>
        </scene>
        <!--Safari View Controller-->
        <scene sceneID="U5j-PF-mDW">
            <objects>
                <viewController id="Y1M-pG-f03" customClass="SafariViewController" customModule="universallink_sample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Duf-gV-UJh"/>
                        <viewControllerLayoutGuide type="bottom" id="HZO-Fu-Fdo"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Pq3-Wy-ExE">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LDf-Ix-RKH" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1300" y="1885"/>
        </scene>
        <!--Web View Controller-->
        <scene sceneID="6yE-wE-j9F">
            <objects>
                <viewController id="zXg-eH-JXJ" customClass="WebViewController" customModule="universallink_sample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="dJE-bh-6PK"/>
                        <viewControllerLayoutGuide type="bottom" id="5Ac-lO-oKM"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ls3-xi-jjE">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5kf-pz-dVY">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <outlet property="delegate" destination="zXg-eH-JXJ" id="fbj-w1-sJ1"/>
                                </connections>
                            </webView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="5kf-pz-dVY" firstAttribute="width" secondItem="ls3-xi-jjE" secondAttribute="width" id="2IZ-zt-q7P"/>
                            <constraint firstItem="5kf-pz-dVY" firstAttribute="height" secondItem="ls3-xi-jjE" secondAttribute="height" id="Lbf-vD-2JA"/>
                            <constraint firstItem="5kf-pz-dVY" firstAttribute="leading" secondItem="ls3-xi-jjE" secondAttribute="leadingMargin" constant="-20" id="WZB-Jx-v5y"/>
                            <constraint firstItem="5kf-pz-dVY" firstAttribute="top" secondItem="ls3-xi-jjE" secondAttribute="topMargin" id="cWq-Of-yyr"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="webview" destination="5kf-pz-dVY" id="ILM-B3-JYp"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="OXI-l1-T17" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-283" y="1885"/>
        </scene>
        <!--Web Kit View Controller-->
        <scene sceneID="bWA-CA-OOy">
            <objects>
                <viewController id="Hwa-Ib-Dbr" customClass="WebKitViewController" customModule="universallink_sample" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="V0e-Eh-p8I"/>
                        <viewControllerLayoutGuide type="bottom" id="W4B-bX-Lfw"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="TFE-LL-A6p">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9pw-0s-vVQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="519" y="1885"/>
        </scene>
    </scenes>
</document>
